--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.7.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.4"
   }
 }
