--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Schemas.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon App.ts"
   },
   "repository": {
     "type": "git",
@@ -13,11 +14,24 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.7.3",
+    "nodemon": "^3.1.7",
     "worker-thread": "^1.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.8.4"
+    "@types/bcrypt": "^5.0.2",
+    "@types/connect-flash": "^0.0.40",
+    "@types/connect-mongodb-session": "^2.4.7",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^22.8.4",
+    "typescript": "^5.6.3"
   }
 }
