--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "fuse.js": "^7.0.0",
