--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fuse.js": "^7.0.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "worker-thread": "^1.1.0"
   },
   "devDependencies": {
