--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "Schemas.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon App.ts"
@@ -29,6 +28,10 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "worker-thread": "^1.1.0"
+  },
+  "peerDependencies": {
+    "@types/node": "^22.9.3",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
