--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-ses": "^3.699.0",
     "@aws-sdk/client-sns": "^3.699.0",
     "@types/nodemailer": "^6.4.17",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -28,6 +29,7 @@
     "express-validator": "^7.2.0",
     "fuse.js": "^7.0.0",
     "mongoose": "^8.7.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -45,6 +47,7 @@
     "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.9.1",
+    "@types/node-cron": "^3.0.11",
     "typescript": "^5.7.2"
   }
 }
