--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^7.2.0",
     "fuse.js": "^7.0.0",
     "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
@@ -46,6 +47,7 @@
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
     "@types/node-cron": "^3.0.11",
     "typescript": "^5.7.2"
