--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.699.0",
     "@aws-sdk/client-sns": "^3.699.0",
+    "@mhoc/axios-digest-auth": "^0.8.0",
     "@types/nodemailer": "^6.4.17",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
@@ -41,6 +42,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/connect-flash": "^0.0.40",
     "@types/connect-mongodb-session": "^2.4.7",
